--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 </head>
 <body>
-    <center>
-    <h3 class="btn btn-success home_heading">Snap Chat 2.0</h3>
+     <center>
+    <h3 class="btn btn-success home_heading">Snap Filter</h3>
       <span class="btn btn-info container">
-        <button class="btn btn-danger chasma" onclick="chasma()">Goggle Filter</button>
-        <button class="btn btn-danger moustache" onclick="moustache()">Moustache Filter</button>
-        <button class="btn btn-danger crown" onclick="crown()">Crown Filter</button>
+        <button class="btn btn-success google" onclick="goggles()">Goggle Filter</button>
+        <button class="btn btn-success moustache" onclick="moustache()">Moustache Filter</button>
+        <button class="btn btn-success crown" onclick="crown()">Crown Filter</button>
     </span>
-       <button onclick="take_snapshot()" class="btn btn-success">Take Snapshot</button>
+    <br><br>
+       <button onclick="take_snapshot()" class="btn btn-warning">Take Snapshot</button>
       
-      <hr>
+     
     </center>
     <script src="main.js"></script>
 </body>
